@@ -1,4 +1,7 @@
 
+	- Bugfix - FF2 - Only send FirePHP user-agent header when Firebug is enabled
+	- Bugfix - FF3 - Only send FirePHP user-agent header when Firebug Net Panel is enabled
+
 2008-05-28 - Release Version: 0.0.6.20
 
   - Bugfix - FF3 - Call request processor on main page load
